# langage-python

./: .mdl.style  .mdlrc  Dockerfile  Makefile  Makefile-docker  README.md  build.zsh  pyproject.toml
.github/workflows/: release.yml
data/: breves-doublons.txt  cigale-fourmi.txt  fichier-a-dehtmliser.html  notes.txt  rectangle.py  script-quality-not-ok.py  script-quality-ok.py  transferrin-report.csv
docs/: 1-introduction.md  10-plus-sur-les-chaines-de-caracteres.md  11-plus-sur-les-listes.md  12-plus-sur-les-fonctions.md  13-dictionnaires-n-uplets-et-ensembles.md  14-avoir-la-classe-avec-les-objets.md  15-gestion-des-exceptions.md  16-creation-de-modules.md  17-bonnes-pratiques-en-programmation-python.md  18-module-re.md  19-module-numpy.md  2-variables.md  20-module-matplotlib.md  21-module-pandas.md  3-affichage.md  4-listes.md  5-boucles-et-comparaisons.md  6-tests.md  7-fichiers.md  8-modules.md  9-fonctions.md  index.md
pandoc-theme/: filter.py  header.yml
