[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = "Support de formation sur le langage Python"
name = "langage_python"
version = "0.1.0"

[tool.poetry.dependencies]
Pygments = "^2.7.3"
pandoc-fignos = "^2.4.0"
pandoc-secnos = "^2.2.2"
panflute = "^1.12.5"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^0.770"
pylint = "^2.4.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
